<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_language"
        android:text="@string/change_language_settings"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <Switch
        android:id="@+id/set_reminder"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/daily_reminder"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_2020_thorin_creative_studio"/>
</LinearLayout>